# SANIC

./: .cproject  .entity.h.swp  .project  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.user.23f5985  CMakeLists.txt.user.780f1ad  CMakeLists.txt.user.7d380f5  CMakeLists.txt.user.9286f2a  CMakeLists.txt.user.a202446  CMakeLists.txt.user.b8de742  CMakeLists.txt.user.cf0bb2d  GLDebugDrawer.cpp  GLDebugDrawer.h  LICENSE  SANIC.kdev4  SANIC.mk  SANIC.pro  SANIC.project  TODO.md  basic.cpp  basic.h  camera.cpp  camera.h  default_model.h  dirtools.cpp  dirtools.h  entity.cpp  entity.h  entityevent.h  input_handler.cpp  input_handler.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  modelinstance.cpp  modelinstance.h  (+17 more)
.externalToolBuilders/: CMake.launch
.kdev4/: SANIC.kdev4  _custom.kdev4
bullet/: BULLET_PHYSICS.cbp  BULLET_PHYSICS.layout  CMakeCache.txt  Makefile  cmake_install.cmake
bullet/src/: Makefile  cmake_install.cmake
bullet/src/BulletCollision/: Makefile  cmake_install.cmake
bullet/src/BulletCollision/CollisionDispatch/: btCollisionWorld.cpp
bullet/src/BulletDynamics/: Makefile  cmake_install.cmake
bullet/src/BulletSoftBody/: Makefile  cmake_install.cmake
bullet/src/LinearMath/: Makefile  btScalar.h  cmake_install.cmake
cmake/Modules/: FindAntTweakBar.cmake  FindLua52.cmake  FindSFGUI.cmake
data/: SANIC  callgrind.out.8268
data/models/: sanic.mtl  sanic.tga  sanic_noskel.max  sanic_skel.max
data/models/anims/walk/: walk.max
data/models/axis/: axis.mtl
data/shaders/: fullbright.shader  normal.shader  normalParallax.shader  normalRelief.shader  smooth.shader  sprite.shader
debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/game/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/src/: CTestTestfile.cmake  Makefile
debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dialogs/: tinyfiledialogs.c  tinyfiledialogs.h
entities/: box.cpp  box.h  decoration.cpp  decoration.h  player.h  pointlight.cpp
game/: CMakeLists.txt  main.cpp
modelLoader/: compileParser.sh  objParser.base.h  objParser.cpp  objParser.h  objScanner.base.h  objScanner.cpp
shaders/: fullbright.shader  leaves.shader  leaves_AT.shader  normal.shader  normalParallax.shader  normalRelief.shader  shadow  smooth.shader  sprite.shader
src/: CMakeLists.txt  GLDebugDrawer.cpp  GLDebugDrawer.h  basic.cpp  basic.h  camera.cpp  camera.h  default_model.h  dirtools.cpp  editor.cpp  editor.h  editorGUI.h  eggineinstance.cpp  eggineinstance.h  entity.cpp  entity.h  entityAImacros.inc  entityState.cpp  entityState.inc  entityTemplates.inc  entity_draw.h  entityevent.h  entitypointer.cpp  entitypointer.h  game.cpp  game.h  global.cpp  global.h  hash.h  input_handler.cpp  input_handler.h  light.cpp  light.h  lua_utils.h  main.cpp  mesh.cpp  mesh.h  modelinstance.cpp  modelinstance.h  modellod.cpp  (+25 more)
src/Tests/: Serialization.cpp
src/dialogs/: tinyfiledialogs.c
src/entities/: box.cpp  box.h  decoration.cpp  decoration.h  directional_light.cpp  directional_light.h  event_base.h  event_printer.cpp  event_printer.h  events.cpp  events.h  incubator.cpp  incubator.h  node.cpp  node.h  player.cpp  player.h  pointlight.cpp  pointlight.h  touch_field.cpp  touch_field.h  touch_field_AI.cpp
src/modelLoader/: objParser.cpp  objParser.h  objParser.y  objScanner.cpp  objScanner.l
src/render/: sector.h
test/: CMakeLists.txt  Serialization.cpp  Serialization.h  main.cpp
